# iDO

./: .eslintrc-auto-import.json  .project.md  API_TESTING_GUIDE.md  CHANGELOG.md  README.md  app.py  index.html  live2d.html  logic_change_target.md  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
backend/: __init__.py  app.py  cli.py
backend/agents/: base.py  manager.py  simple_agent.py
backend/config/: config.toml  loader.py  prompts.toml  prompts_en.toml  prompts_zh.toml
backend/core/: _event_state.py  coordinator.py  db.py  events.py  json_parser.py  logger.py  models.py  paths.py  protocols.py  settings.py
backend/core/dashboard/: __init__.py  manager.py
backend/core/db/: conversations.py  models.py
backend/core/sqls/: __init__.py  migrations.py  queries.py  schema.py
backend/db/: __init__.py  init.py  schema.sql
backend/handlers/: __init__.py  agents.py  chat.py  dashboard.py  friendly_chat.py  image.py  insights.py  live2d.py  models.py  models_management.py  perception.py  permissions.py  processing.py  screens.py  system.py
backend/llm/: client.py  manager.py  prompt_manager.py
backend/models/: __init__.py  base.py  entities.py  permissions.py  requests.py
backend/perception/: __init__.py  base.py  factory.py  manager.py  screen_state_monitor.py  screenshot_capture.py  storage.py
backend/processing/: activity_detector.py  filter_rules.py  image_compression.py  image_manager.py  image_optimization.py  merger.py  persistence.py  persistence_new.py  pipeline.py  pipeline_new.py  summarizer.py  summarizer_extensions.py
backend/scripts/: check_empty_activities.py  create_test_data.py  demo_perception.py  demo_processing.py  diagnose_activities.py  enable_friendly_chat.py  test_activity_processing.py  test_db_settings.py  test_events.py  test_full_pipeline.py  test_image_compression.py  test_llm.py  test_raw_records_capture.py  test_summarizer.py
backend/services/: chat_service.py  friendly_chat_service.py
backend/system/: __init__.py  permissions.py  runtime.py
docs/: PERMISSIONS_FIX.md  PERMISSIONS_IMPLEMENTATION.md  PYDANTIC_ALIAS_FIX.md  README.md  SIDEBAR_ANALYSIS.md  api_handler.md  app_launch_wrapper.md  architecture.md  backend.md  development.md  fastapi_usage.md  frontend.md  i18n.md  image_optimization.md  macos_signing.md  permissions_guide.md  python_environment.md  setup_py_verification.md  testing_permissions.md
docs/architecture/: README.md  data-flow.md  tech-stack.md  three-layer-design.md
docs/developers/: README.md
docs/developers/architecture/: README.md  tech-stack.md  three-layer-design.md
docs/developers/deployment/: troubleshooting.md
docs/developers/getting-started/: README.md  installation.md
docs/developers/guides/: testing-welcome-flow.md
docs/getting-started/: README.md  development-workflow.md  first-run.md  installation.md
docs/guides/backend/: README.md
docs/guides/frontend/: README.md
docs/user-guide/: README.md  faq.md  features.md  installation.md
scripts/: README.md  build-bundle.ps1  build-bundle.sh  fix-app-launch.sh  migrate_add_model_id_to_conversations.py  migrate_llm_usage_add_config_id.py  sign-macos.sh  tauri-dev-gen-ts.ps1
scripts/unix/: build-bundle.sh  fix-app-launch.sh  setup-env.sh  sign-macos.sh  tauri-dev-gen-ts.sh
scripts/windows/: build-bundle.ps1  setup-env.ps1  tauri-dev-gen-ts.ps1
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.bundle.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/ido_app/: __init__.py  __main__.py
src-tauri/python/rewind_app/: __init__.py
src-tauri/src/: lib.rs  main.rs
src/components/activity/: ActivityItem.tsx  ActivityTimeline.tsx  EventItem.tsx  PhotoGrid.tsx  RecordItem.tsx  ScreenshotThumbnail.tsx  TimelineDayItem.tsx
src/components/chat/: ActivityContext.tsx  ConversationList.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx
src/components/dashboard/: metric-card.tsx  usage-trend-chart.tsx
src/components/insights/: DayTodoList.tsx  EventCard.tsx  PendingTodoList.tsx  TodoCalendar.tsx
src/components/layout/: AppSidebar.tsx  PageHeader.tsx  PageLayout.tsx  Sidebar.tsx  Titlebar.tsx
src/components/models/: ModelManagement.tsx
src/components/permissions/: PermissionItem.tsx  PermissionsGuide.tsx
src/components/settings/: BatchDeleteSettings.tsx  DeveloperSettings.tsx  FriendlyChatSettings.tsx  GeneralSettings.tsx  Live2dSettings.tsx  ScreenCard.tsx  ScreenSelectionSettings.tsx
src/components/setup/: InitialSetupFlow.tsx
src/components/shared/: DiaryContent.tsx  MenuButton.tsx  StickyTimelineGroup.tsx  TimeDisplay.tsx  TimelineGroup.tsx
src/components/system/: FloatingStatusBall.tsx  SystemStatusIndicator.tsx
src/components/ui/: ai-response.tsx  button.tsx  calendar.tsx  chart.tsx  context-menu.tsx  date-picker.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  slider.tsx
src/hooks/: useActivitySync.ts  useDevShortcuts.ts  useFriendlyChat.ts  useMonitorAutoSync.ts  useSystemStatus.ts  useTray.ts
src/layouts/: Auth.tsx  MainLayout.tsx
src/lib/client/: _apiTypes.d.ts  apiClient.ts
src/lib/config/: menu.ts
src/lib/live2d/: windowManager.ts
src/lib/services/: activityNew.ts  chat.ts  dashboard.ts  insights.ts
src/lib/stores/: activity.ts  chat.ts  dashboard.ts  friendlyChat.ts  insights.ts  live2d.ts  models.ts  permissions.ts  settings.ts  setup.ts  ui.ts  user.ts
src/lib/themes/: code-themes.ts
src/lib/types/: activity.ts  chat.ts  dashboard.ts  friendlyChat.ts  live2d.ts  models.ts  permissions.ts  settings.ts
src/lib/utils/: date-range.ts
src/live2d/: App.tsx  main.tsx  style.css
src/locales/: en.ts  zh-CN.ts
src/routes/: Index.tsx
src/styles/: base.css  code-block.css  index.css  live2d.css  theme-variables.css  toast.css
src/types/: auto-imports.d.ts
src/views/: AIDiary.tsx  AIKnowledge.tsx  AITodos.tsx  About.tsx  Activity.tsx  App.tsx  Chat.tsx  Dashboard.tsx  RecentEvents.tsx  Settings.tsx
(+20 files in other folders)
