[project]
name = "rewind-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
  "pytauri == 0.8.*",
  "pydantic == 2.*",
  "anyio == 4.*",
  # 打包用依赖
  "fastapi>=0.119.0",
  "uvicorn[standard]>=0.38.0",
  "httpx>=0.25.2",
  "loguru>=0.7.2",
  "pynput>=1.8",
  "mss>=10.1",
  "opencv-python>=4.12.0.88",
  "pillow>=12.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
  "python-multipart>=0.0.6",
  "toml>=0.10.2",
  "pyobjc-framework-cocoa>=11.1",
  "smolagents>=1.22.0",
  "imagehash>=4.3.2",
]

[project.optional-dependencies]
dev = [
  # 开发用依赖
  "black>=25.9.0",
  "isort>=7.0.0",
  "mypy>=1.18.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[project.entry-points.pytauri]
ext_mod = "rewind_app.ext_mod"

[build-system]
requires = [
  "setuptools >= 80",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
# 关键修改：指向 src-tauri/python 目录
find = { where = ["src-tauri/python"] }

[tool.setuptools.package-data]
# 包含配置文件和其他数据文件
rewind_backend = [
    "config/*.toml",
    "config/*.yaml",
    "perception/*.md",
]
tauri_app = [
    "*.toml",
    "*.yaml",
]

[tool.pyright]
# 排除不需要分析的目录，避免消耗大量内存
# see: https://github.com/microsoft/pyright/blob/1.1.391/docs/configuration.md#environment-options
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/target",
    "**/dist",
    "**/.venv",
    "**/.*",
    "src-tauri/pyembed/",
    "src-tauri/frontend/",
]
