[project]
name = "ido-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
  "pytauri == 0.8.*",
  "pydantic == 2.*",
  "anyio == 4.*",
  # 打包用依赖
  "fastapi>=0.119.0",
  "uvicorn[standard]>=0.38.0",
  "httpx>=0.25.2",
  "loguru>=0.7.2",
  "pynput>=1.8",
  "mss>=10.1",
  "opencv-python-headless>=4.12.0.88",
  "pillow>=12.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
  "python-multipart>=0.0.6",
  "toml>=0.10.2",
  "pyobjc-framework-cocoa>=11.1; sys_platform == 'darwin'",
  "pyobjc-framework-quartz>=11.1; sys_platform == 'darwin'",
  "smolagents>=1.22.0",
  "imagehash>=4.3.2",
]

[project.optional-dependencies]
dev = [
  # 开发用依赖
  "black>=25.9.0",
  "isort>=7.0.0",
  "mypy>=1.18.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[project.entry-points.pytauri]
ext_mod = "ido_app.ext_mod"

[build-system]
requires = [
  "setuptools >= 80",
  "setuptools-rust >= 1.11, <2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
# 跨平台方案：直接引用根目录的 backend 和 src-tauri/python
# 这样避免了软链接在 Windows 上的兼容性问题
find = { where = [".", "src-tauri/python"], include = ["ido_backend*", "ido_app*", "backend*"] }

[tool.setuptools.package-data]
# 包含配置文件和其他数据文件
ido_backend = [
    "config/*.toml",
    "config/*.yaml",
    "perception/*.md",
]
ido_app = [
    "*.toml",
    "*.yaml",
]

backend = [
    "config/*.toml",
    "config/*.yaml",
    "perception/*.md",
]

[tool.pyright]
# 排除不需要分析的目录，避免消耗大量内存
# see: https://github.com/microsoft/pyright/blob/1.1.391/docs/configuration.md#environment-options
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/target",
    "**/dist",
    "**/.venv",
    "**/.*",
    "src-tauri/pyembed/",
    "src-tauri/frontend/",
]

[tool.ty.src]
# ty (basedpyright) 配置
# see: https://docs.astral.sh/ty/configuration/

# 包含的目录
include = ["backend", "src-tauri/python"]

# 排除的目录
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/target",
    "**/dist",
    "**/.venv",
    "**/.*",
    "src-tauri/pyembed/",
    "src-tauri/frontend/",
    "build/",
    "backend/scripts/**",
]

[tool.ty.environment]
# Python 版本
python-version = "3.14"

# 项目根目录 (用于查找第一方模块)
root = [".", "backend", "src-tauri/python"]

[tool.ty.rules]

[dependency-groups]
dev = [
    "ty>=0.0.1a25",
]
# ty 只有少量规则，大多数规则名称与 pyright 不同
# 参考: https://docs.astral.sh/ty/rules/
#
# 常见的 ty 规则示例:
# possibly-unresolved-reference = "warn"
# division-by-zero = "warn"
#
# 注意: ty 的规则集与 pyright 不同，许多 pyright 规则在 ty 中不存在
# 如果需要更细粒度的类型检查，请使用 pyright 或 basedpyright
