[package]
name = "rewind"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rewind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "rewind-app"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
pytauri = { version = "0.8", features = ["plugin-notification"] }
pyo3 = { version = "0.25" }
tauri-plugin-pytauri = { version = "0.8" }
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api"] }

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
