[package]
name = "ido"
version = "0.1.0"
description = "A Tauri App"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ido_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "ido-app"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
pytauri = { version = "0.8", features = ["plugin-notification"] }
pyo3 = { version = "0.25" }
tauri-plugin-pytauri = { version = "0.8" }
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"

[profile.release]
panic = "abort"   # 去掉昂贵的恐慌清理逻辑
codegen-units = 1 # 一个接一个地编译包，这样编译器就可以更好地优化
lto = true        # 启用链接到优化
opt-level = "s"   # 优化二进制文件大小,并且不会太大消耗性能,"z"极致优化大小但是会消耗性能
strip = true      # 删除调试符号

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
